- Fixed typos in clips.html and clips.css
- Fixed a regression when adding clips to current save
- Created an object for UI elements
- Deleted sclipts/authentication.js

--- a/public/css/clips.css
+++ b/public/css/clips.css
@@ -79,7 +79,7 @@ a {
   align-items: center;
 }
 
-.fect-group {
+.fetch-group {
   border: 2px solid rgb(0, 102, 255);
   background-color: rgb(0, 102, 255, 0.3);
 }
