--- a/public/css/clips.css
+++ b/public/css/clips.css
@@ -3,7 +3,7 @@ body {
 }
 
 img {
-  width: 100px;
+  max-height: 60px;
 }
 
 input {
@@ -32,10 +32,10 @@ a {
 }
 
 #import-export-input {
+  display: flex;
+  margin: auto;
   height: 600px;
   width: 1000px;
-  margin: auto;
-  display: flex;
   justify-content: center;
 }
 
@@ -45,25 +45,25 @@ a {
 /********************/
 
 .ribbon {
+  display: flex;
+  margin: auto;
   padding-top: 3px;
   padding-right: 5px;
   padding-bottom: 3px;
   padding-left: 5px;
-  margin: auto;
-  display: flex;
-  justify-content: center;
   border-bottom: 2px solid rgb(85, 5, 6);
+  justify-content: center;
 }
 
 .ribbon-group {
-  margin: auto;
   display: flex;
+  margin: auto;
   justify-content: center;
 }
 
 .group-label {
-  margin: auto;
   display: flex;
+  margin: auto;
   justify-content: center;
   font-family: Arial;
   color: white;
@@ -71,10 +71,10 @@ a {
 }
 
 .group {
-  border-radius: 10px;
-  padding: 3px;
-  margin: 3px;
   display: flex;
+  margin: 3px;
+  padding: 3px;
+  border-radius: 10px;
   justify-content: center;
   align-items: center;
 }
@@ -104,15 +104,14 @@ a {
 /********************/
 
 .button {
-  border: none;
-  color: white;
+  display: inline-block;
+  margin: 4px 2px;
   padding: 5px 10px;
+  border: 2px solid black;
+  color: white;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 14px;
-  margin: 4px 2px;
-  border: 2px solid black;
   cursor: pointer;
 }
 
@@ -123,6 +122,7 @@ a {
 .submit-button {
   background-color: rgb(0, 102, 255);
 }
+
 .select-button {
   background-color: rgb(255, 163, 26);
 }
@@ -159,28 +159,29 @@ a {
 
 .divTableRow {
   display: table-row;
+  height: 60px;
 }
 
 .divTableCell {
+  display: table-cell;
+  vertical-align:middle;
+  padding: 3px 10px;
   border: 1px solid rgb(117, 0, 0);
   background-color: rgb(85, 5, 6);
-  display: table-cell;
-  padding: 3px 10px;
-  font-family: Arial;
   color: white;
-  vertical-align:middle;
+  font-family: Arial;
 }
 
 .headerButton {
   height: 25px;
   width: 25px;
+  margin: 3px 3px;
+  padding: 0px;
+  border: 1px solid black;
   background-color: rgb(255, 163, 26, 0.6);
   color: black;
   font-size: 14px;
   text-align: center;
-  margin: 3px 3px;
-  padding: 0px;
-  border: 1px solid black;
   cursor: pointer;
 }
 
