--- a/public/css/clips.css
+++ b/public/css/clips.css
@@ -7,38 +7,45 @@ img {
 }
 
 input {
+  margin-left: 3px;
+  margin-right: 3px;
   border: 2px solid back;
   border-radius: 4px;
   text-align: center;
-  height: 20px;
   font-size: 12px;
+  height: 20px;
 }
 
 a {
   color: rgb(0, 153, 255);
 }
 
-
 /********************/
-/* Import / Export  */
+/* Clips            */
 /********************/
 
-#import-export-ribbon {
-  display: none;
+#remote-clips {
+  position: relative;
+  float: left;
+  width: 49%;
+  z-index: 1;
 }
 
-#import-export {
-  display: none;
+#local-clips {
+  position: relative;
+  float: right;
+  width: 49%;
+  z-index: 1;
 }
 
-#import-export-input {
-  display: flex;
-  margin: auto;
-  height: 600px;
-  width: 1000px;
-  justify-content: center;
+.info {
+  margin-bottom: 5px;
+  color: white;
+  text-align: center;
+  text-decoration: underline;
+  font-family: Arial;
+  font-size: 18px;
 }
-
 
 /********************/
 /* Ribbon           */
@@ -46,57 +53,10 @@ a {
 
 .ribbon {
   display: flex;
-  margin: auto;
-  padding-top: 3px;
-  padding-right: 5px;
-  padding-bottom: 3px;
-  padding-left: 5px;
-  border-bottom: 2px solid rgb(85, 5, 6);
-  justify-content: center;
-}
-
-.ribbon-group {
-  display: flex;
-  margin: auto;
-  justify-content: center;
-}
-
-.group-label {
-  display: flex;
-  margin: auto;
-  justify-content: center;
-  font-family: Arial;
-  color: white;
-  transform: translateY(4px); 
-}
-
-.group {
-  display: flex;
-  margin: 3px;
-  padding: 3px;
-  border-radius: 10px;
   justify-content: center;
   align-items: center;
-}
-
-.fetch-group {
-  border: 2px solid rgb(0, 102, 255);
-  background-color: rgb(0, 102, 255, 0.3);
-}
-
-.select-group {
-  border: 2px solid rgb(255, 163, 26);
-  background-color: rgb(255, 163, 26, 0.3);
-}
-
-.save-group {
-  border: 2px solid rgb(76, 175, 80);
-  background-color: rgb(76, 175, 80, 0.3);
-}
-
-.video-group {
-  border: 2px solid rgb(153, 0, 255);
-  background-color: rgb(153, 0, 255, 0.3);
+  padding: 3px;
+  border-bottom: 2px solid rgb(85, 5, 6);
 }
 
 /********************/
@@ -108,9 +68,11 @@ a {
   margin: 4px 2px;
   padding: 5px 10px;
   border: 2px solid black;
+  background-color: rgb(150, 150, 150);
   color: white;
   text-align: center;
   text-decoration: none;
+  font-family: Arial;
   font-size: 14px;
   cursor: pointer;
 }
@@ -120,26 +82,26 @@ a {
 }
 
 .submit-button {
-  background-color: rgb(0, 102, 255);
+  background-color: rgb(0, 102, 255, 0.7);
 }
 
 .select-button {
-  background-color: rgb(255, 163, 26);
+  background-color: rgb(255, 163, 26, 0.7);
+  position: absolute;
+  right: 0px;
 }
 
 .save-button {
-  background-color: rgb(76, 175, 80);
+  background-color: rgb(76, 175, 80, 0.7);
+}
+
+.share-button {
+  background-color: rgb(196, 0, 0, 0.7);
 }
 
 .video-button {
-  background-color: rgb(153, 0, 255);
+  background-color: rgb(153, 0, 255, 0.7);
 }
-
-.toggle-button {
-  background-color: rgb(200, 200, 200, 0.6);
-  height: 70px;
-}
-
 
 /********************/
 /* Table            */
@@ -148,8 +110,7 @@ a {
 .divTable {
   display: table;
   margin-top: 4px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
 }
 
 .divTableCaption {
@@ -169,6 +130,7 @@ a {
   border: 1px solid rgb(117, 0, 0);
   background-color: rgb(85, 5, 6);
   color: white;
+  font-size: 12px;
   font-family: Arial;
 }
 
@@ -180,11 +142,35 @@ a {
   border: 1px solid black;
   background-color: rgb(255, 163, 26, 0.6);
   color: black;
-  font-size: 14px;
+  font-size: 12px;
   text-align: center;
   cursor: pointer;
 }
 
 .annotation {
   color: #999999;
+  font-family: Arial;
+}
+
+/********************/
+/* Import / Export  */
+/********************/
+
+#import-export {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 99.5%;
+  height: 99%;
+  background: rgb(117, 0, 0, 0.85);
+  z-index: 2;
+}
+
+#import-export-input {
+  display: flex;
+  margin: auto;
+  height: 600px;
+  width: 1000px;
+  justify-content: center;
 }
