--- a/public/css/clips.css
+++ b/public/css/clips.css
@@ -1,8 +1,13 @@
+/*********************/
+/* All elements      */
+/*********************/
+
 body {
   background: rgb(117, 0, 0);
   font-family: Arial;
   font-size: 14px;
   color: white;
+  overflow: hidden;
 }
 
 img {
@@ -18,26 +23,57 @@ input {
   height: 20px;
 }
 
+span {
+  position: relative;
+  top: 20%;
+  font-size: 16px;
+  color: rgb(128, 128, 128);
+  text-align: center;
+}
+
 a {
   color: rgb(0, 153, 255);
 }
 
 /*********************/
-/* Clips             */
+/* Clips / Viewer    */
 /*********************/
 
-#remote-clips {
-  position: relative;
-  float: left;
-  width: 49%;
+#remote-clips, #local-clips {
+  position: absolute;
+  left: 3px;
+  width: 59%;
+  height: 90%;
   z-index: 1;
 }
 
 #local-clips {
-  position: relative;
-  float: right;
-  width: 49%;
+  display: none;
+}
+
+#local-clips-table, #remote-clips-table {
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+#viewer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 0px;
+  width: 39%;
+  height: 90%;
+  border-left: 1px dotted black;
   z-index: 1;
+}
+
+#viewer-container {
+  display: none;
+  -moz-box-shadow: 6px 4px 10px rgba(0, 0, 0, 0.8);
+  -webkit-box-shadow: 6px 4px 10px rgba(0, 0, 0, 0.8);
+  box-shadow: 6px 4px 10px rgba(0, 0, 0, 0.8);
 }
 
 .info {
@@ -84,10 +120,8 @@ a {
   background-color: rgb(0, 102, 255, 0.7);
 }
 
-.select-button {
+.switch-button {
   background-color: rgb(255, 163, 26, 0.7);
-  position: absolute;
-  right: 0px;
 }
 
 .save-button {
@@ -102,6 +136,21 @@ a {
   background-color: rgb(153, 0, 255, 0.7);
 }
 
+#view-local {
+  position: absolute;
+  right: 0px;
+}
+
+#view-remote {
+  position: absolute;
+  left: 0px;
+}
+
+#view-video {
+  position: absolute;
+  right: 0px;
+}
+
 /*********************/
 /* Table             */
 /*********************/
@@ -110,6 +159,7 @@ a {
   display: table;
   margin-top: 4px;
   width: 100%;
+  border-collapse: collapse;
 }
 
 .divTableCaption {
@@ -123,13 +173,18 @@ a {
   height: 60px;
 }
 
+.divTableRow:nth-child(even) {
+  background-color: rgb(85, 5, 6);
+}
+
+.divTableRow:nth-child(odd) {
+  background-color: rgb(97, 17, 18);
+}
+
 .divTableCell {
   display: table-cell;
   vertical-align:middle;
   padding: 3px 10px;
-  border: 1px solid rgb(117, 0, 0);
-  background-color: rgb(85, 5, 6);
-  color: white;
   font-size: 12px;
 }
 
@@ -146,8 +201,18 @@ a {
   cursor: pointer;
 }
 
+.embed-link {
+  cursor: pointer;
+  text-decoration: underline;
+  color: rgb(0, 153, 255);
+}
+
 .annotation {
   color: #999999;
+}
+
+.highlightedRow {
+  border: 1px solid red;
 }
 
 /*********************/
@@ -166,6 +231,34 @@ a {
 /* Modal dialog      */
 /*********************/
 
+.modal-dialog {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgb(117, 0, 0, 0.85);
+  z-index: 2;
+}
+
+.modal-dialog input {
+  width: 800px;
+  margin: 10px;
+  padding-left: 5px;
+  background-color: rgb(200, 200, 200);
+}
+
+.modal-dialog-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  border-top:  2px solid rgb(85, 5, 6);
+  margin-top: 15px;
+}
+
 .vertical {
   display: flex;
   flex-direction: column;
@@ -176,26 +269,25 @@ a {
   flex-direction: row;
 }
 
-.modal-dialog {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  width: 99.5%;
-  height: 99%;
-  background: rgb(117, 0, 0, 0.85);
-  z-index: 2;
+/*********************/
+/* Scrollbars        */
+/*********************/
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgb(200, 200, 200, 0.4) rgb(200, 200, 200, 0.3);
 }
 
-.modal-dialog input {
-  width: 800px;
-  margin: 10px;
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 7px;
 }
 
-.modal-dialog-buttons {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  border-top:  2px solid rgb(85, 5, 6);
-  margin-top: 15px;
+*::-webkit-scrollbar-track {
+  background: rgb(200, 200, 200, 0.3);
+}
+
+*::-webkit-scrollbar-thumb {
+  background: rgb(200, 200, 200, 0.4);
 }
