--- a/public/css/video.css
+++ b/public/css/video.css
@@ -14,6 +14,11 @@ video {
 	z-index: 1;
 }
 
+#transitionPlayer {
+	display: block;
+	z-index: 3;
+}
+
 #overlay-container {
 	position: fixed;
 	display: none;
