--- a/public/css/clips.css
+++ b/public/css/clips.css
@@ -241,7 +241,7 @@ a {
   width: 100%;
   height: 100%;
   background: rgb(117, 0, 0, 0.85);
-  z-index: 2;
+  z-index: 3;
 }
 
 .modal-dialog input {
@@ -249,6 +249,10 @@ a {
   margin: 10px;
   padding-left: 5px;
   background-color: rgb(200, 200, 200);
+}
+
+.modal-dialog.small input {
+  width: 300px;
 }
 
 .modal-dialog-buttons {
